--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
         </dependency>
         <dependency>
             <groupId>jartree</groupId>
-            <artifactId>jartree</artifactId>
+            <artifactId>jartree-util</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
