--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -40,6 +40,27 @@
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>2.10</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <tasks>
+                                <mkdir dir="${basedir}/target/classes"/>
+                                <tstamp>
+                                    <format property="last.updated" pattern="yyyyMMddHHmmssSSS"/>
+                                </tstamp>
+                                <echo file="${basedir}/target/classes/build.timestamp" message="${last.updated}"/>
+                            </tasks>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
