--- a/builder/pom.xml
+++ b/builder/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>ammonite-ops_2.11</artifactId>
             <version>0.7.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven.shared</groupId>
+            <artifactId>maven-invoker</artifactId>
+            <version>2.2</version>
+        </dependency>
     </dependencies>
 
 
