--- a/builder/pom.xml
+++ b/builder/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>maven-modules</groupId>
         <artifactId>maven-modules</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <artifactId>maven-modules-builder</artifactId>
     <packaging>jar</packaging>
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>maven-modules</groupId>
             <artifactId>maven-modules-poms</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.aether</groupId>
