--- a/poms/pom.xml
+++ b/poms/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>maven-modules</groupId>
         <artifactId>maven-modules</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <artifactId>maven-modules-poms</artifactId>
 
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>maven-modules</groupId>
             <artifactId>maven-modules-utils</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
