--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,23 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>maven-modules</groupId>
-    <artifactId>maven-modules</artifactId>
+    <groupId>mvnmod</groupId>
+    <artifactId>mvnmod</artifactId>
     <version>1.0.0</version>
     <packaging>pom</packaging>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.10</version>
+            </plugin>
+        </plugins>
+    </build>
     <modules>
         <module>modules</module>
-        <module>generator</module>
         <module>utils</module>
         <module>poms</module>
         <module>builder</module>
+        <module>generator</module>
     </modules>
 </project>
