--- a/common/pom.xml
+++ b/common/pom.xml
@@ -1,7 +1,7 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
     <groupId>mvnmod</groupId>
-    <artifactId>mvnmod-builder</artifactId>
+    <artifactId>mvnmod-common</artifactId>
     <version>2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <build>
@@ -105,9 +105,34 @@
     </build>
     <dependencies>
         <dependency>
-            <groupId>mvnmod</groupId>
-            <artifactId>mvnmod-common</artifactId>
-            <version>2-SNAPSHOT</version>
+            <groupId>org.scala-lang.modules</groupId>
+            <artifactId>scala-xml_2.11</artifactId>
+            <version>1.0.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.aether</groupId>
+            <artifactId>aether-util</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lihaoyi</groupId>
+            <artifactId>ammonite-ops_2.11</artifactId>
+            <version>0.7.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-sbt</groupId>
+            <artifactId>io_2.11</artifactId>
+            <version>1.0.0-M3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.shrinkwrap.resolver</groupId>
+            <artifactId>shrinkwrap-resolver-api-maven</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.shared</groupId>
+            <artifactId>maven-invoker</artifactId>
+            <version>2.2</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
