--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -107,7 +107,7 @@
         <dependency>
             <groupId>mvnmod</groupId>
             <artifactId>mvnmod-builder</artifactId>
-            <version>1.4</version>
+            <version>2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
