--- a/builder/pom.xml
+++ b/builder/pom.xml
@@ -107,7 +107,7 @@
         <dependency>
             <groupId>mvnmod</groupId>
             <artifactId>mvnmod-common</artifactId>
-            <version>1.2</version>
+            <version>2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
