--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -4,6 +4,9 @@
     <artifactId>mvnmod-modules</artifactId>
     <version>2-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <organization>
+        <name>mvnmod</name>
+    </organization>
     <build>
         <finalName>product</finalName>
         <plugins>
