--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,6 @@
         <module>modules</module>
         <module>builder</module>
         <module>generator</module>
+        <module>builders</module>
     </modules>
 </project>
