--- a/builders/pom.xml
+++ b/builders/pom.xml
@@ -1,7 +1,7 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
     <groupId>mvnmod</groupId>
-    <artifactId>mvnmod-builder</artifactId>
+    <artifactId>mvnmod-builders</artifactId>
     <version>2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <organization>
@@ -109,13 +109,8 @@
     <dependencies>
         <dependency>
             <groupId>mvnmod</groupId>
-            <artifactId>mvnmod-common</artifactId>
+            <artifactId>mvnmod-modules</artifactId>
             <version>2-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>2.11.8</version>
         </dependency>
     </dependencies>
     <repositories> </repositories>
