--- a/jars/pom.xml
+++ b/jars/pom.xml
@@ -18,9 +18,12 @@
             </goals>
             <configuration>
               <file>C:\Oracle\wls\jdk8\lib\tools.jar</file>
-              <groupId>jdk.tools</groupId>
-              <artifactId>jdk.tools</artifactId>
-              <version>1.8</version>
+              <!--<groupId>jdk.tools</groupId>-->
+              <!--<artifactId>jdk.tools</artifactId>-->
+              <!--<version>1.8</version>-->
+              <groupId>com.sun.java</groupId>
+              <artifactId>tools</artifactId>
+              <version>1.8.0_111</version>
               <packaging>jar</packaging>
             </configuration>
           </execution>
